# sae-cleaning-status-filter

./: .gitignore  Dockerfile  Makefile  README.md  docker_build.sh  main.py  model_downloader.sh  pyproject.toml  settings.template.yaml
.github/workflows/: build-publish-latest.yaml  create-release.yaml  pr_build.yaml
cleaningstatusfilter/: cleaningstatusfilter.py  config.py  mirrordetection.py  model.py  stage.py
debian/: changelog  cleaningstatusfilter.service  control  install  postinst  preinst  prerm  rules
doc/: DEV_README.md  Model_Development.md
tests/: test_imports.py  test_mirrordetection.py  test_stage.py
