[tool.poetry]
name = "cleaningstatusfilter"
version = "0.4.0"
description = ""
authors = ["flonix8 <flstanek@googlemail.com>"]
license = "AGPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
python = "^3.13"
pydantic = "2.12.5"
visionapi = { git = "https://github.com/starwit/vision-api.git", subdirectory = "python/visionapi", tag = "3.5.3" }
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "1.0.0" }
pydantic-settings = "2.12.0"
prometheus-client = "0.23.1"
geojson-pydantic = "2.1.0"
shapely = "2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
# DO NOT CHANGE THE VERSIONS BELOW, they must match the versions in the docker base image (https://github.com/starwit/build-containers/tree/main/sae-cv-base)
openvino = "2025.4.0"
ultralytics = "8.3.191"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
